# sufa

./: .gitignore  CMakeLists.txt  README.md  args.cpp  args.h  completion.cpp  completion.h  home.cpp  home.h  main.cpp  signal.cpp  signal.h
cmd/: cd_command.cpp  cd_command.h  cmd_cache.cpp  cmd_cache.h  command.cpp  command.h
managers/: command_manager.cpp  command_manager.h
structs/: trie.cpp  trie.h
